<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/img_616"
    android:focusable="true">  

<ImageView android:layout_gravity="center" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:src="@drawable/pixster" 
    android:id="@+id/pixster"></ImageView>   
<Button
android:layout_height="wrap_content"
android:text="@string/continue_label" android:clickable="true" 
android:id="@+id/connectButton"
android:textColor="#111199"
android:layout_width="180dip"
android:layout_toLeftOf="@+id/viewPicturesButton"
android:layout_alignTop="@+id/viewPicturesButton"
android:typeface="serif"
android:textStyle="italic"
/>   
<Button
android:layout_height="wrap_content"
android:text="@string/new_game_label" 
android:id="@+id/viewPicturesButton"
android:textColor="#111199"
android:shadowColor="#555555" 
android:layout_width="160dip"
android:layout_below="@+id/pixster"
android:layout_alignParentRight="true"
android:layout_marginLeft="10dip"
android:typeface="serif"
android:textStyle="italic"
/>
<Button
android:id="@+id/about_button"
android:layout_width="180dip"
android:layout_height="wrap_content"
android:text="@string/about_label" 
android:textColor="#111199"
android:shadowColor="#555555"
android:layout_toLeftOf="@+id/exit_button"
android:layout_alignTop="@+id/exit_button"
android:typeface="serif"
android:textStyle="italic"
/>

<Button
android:id="@+id/exit_button"
android:layout_width="160dip"
android:layout_height="wrap_content"
android:text="@string/exit_label"
android:textColor="#111199"
android:shadowColor="#555555"
android:layout_below="@+id/viewPicturesButton"
android:layout_alignParentRight="true"
android:layout_marginLeft="10dip" 
android:typeface="serif"
android:textStyle="italic"
/>
<Button
android:id="@+id/options_button"
android:layout_width="160dip"
android:layout_height="wrap_content"
android:text="@string/options_label"
android:textColor="#111199"
android:shadowColor="#555555"
android:layout_below="@+id/exit_button"
android:layout_alignParentRight="true"
android:layout_marginLeft="10dip" 
android:typeface="serif"
android:textStyle="italic" 
/>

</RelativeLayout>